# freebodyproblem

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  imgui.ini
backend/: connection.cpp  connection.hpp  mavlink_parser.cpp  mavlink_parser.hpp  mavlink_sender.cpp  mavlink_sender.hpp
frontend/: app_log.hpp  main.cpp  mission_pick.hpp  settings.cpp  settings.hpp
frontend/widgets/: bottombar.cpp  bottombar.hpp  center_view.cpp  center_view.hpp  layout.hpp  map_view.cpp  map_view.hpp  param_meta.hpp  sidebar_left.cpp  sidebar_left.hpp  sidebar_right.cpp  sidebar_right.hpp  sidebar_themes.cpp  sidebar_themes.hpp  splash_screen.cpp  splash_screen.hpp  stb_impl.cpp  theme.hpp  topbar.cpp  topbar.hpp  video_player.cpp  video_player.hpp
frontend/widgets/sidebar_left/: mavlink_display_generated.cpp  mavlink_display_generated.hpp  mavlink_display_shim.hpp  mavlink_field_catalog_generated.cpp  mavlink_field_catalog_generated.hpp  sidebar_internal.hpp  tab_connection.cpp  tab_flight.cpp  tab_mavlink.cpp  tab_mission.cpp  tab_params.cpp  tab_themes.cpp
scripts/: gen_mavlink_display.py
